# pymcf

./: .gitignore  README.md  config.py  mcfunction.py  pyproject.toml  test.css  test.dot  test.py
ast_/: __init__.py  _syntactic.py  ast_gen.py  context.py  runtime.py
data/: __init__.py  data.py  exceptions.py
doc/: lang.md  mcfunction.md  project.md
ir/: __init__.py  codeblock.py  ir_gen.py  visualize.py
mcf/: code_gen.py
pymcf/: __init__.py  _execute.py  _mcfunction.py  _project.py  breaklevel.py  code_helpers.py  codes.py  config.py  context.py  data.py  exceptions.py  iterators.py  jsontext.py  mcfunction.py  mcversions.py  operations.py  project.py  pyops.py  random.py  text.py  util.py
pymcf/_frontend/: __init__.py  ast_rewrite.py  break_level.py  context.py  ct_rewrite.py  func_rewrite.py  pyops.py
pymcf/ast_/: __init__.py  _syntactic.py  ast_gen.py  constructor.py  context.py  runtime.py  scope.py  syntactic.py
pymcf/data/: __init__.py  data.py  exceptions.py  nbt.py  score.py
pymcf/datas/: Entity.py  Score.py  __init__.py  datas.py  nbt.py  score.py  selector.py  structure.py
pymcf/entity/: __init__.py  entities.py  entity.py  structure.py
pymcf/ir/: __init__.py  codeblock.py  ir_gen.py
pymcf/math/: __init__.py  fixed.py  math.py  matrix.py
pymcf/mc/: code_gen.py  environment.py  scope.py
pymcf/mcf/: code_gen.py
pymcf/operations/: __init__.py  entity_ops.py  execute_ops.py  nbt_ops.py  operations.py  score_ops.py
pymcf/visualize/: __init__.py  ast.css  ast.py  ir.py  reprs.py
tmp/: test.py
visualize/: ast.py  ir.py  reprs.py
(+72 files in other folders)
