[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "pymcf"
version = "0.0.1"
requires-python = ">=3.13"
dependencies = ["nbtlib>=1.12.1"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

[tool.setuptools.package-data]
pymcf = [
    "visualize/ast.css"
]

[project.optional-dependencies]
debug-viz = [
    "grapviz",
    "dominate"
]